CHANGES IN FLTK 1.3.0

	- Improved test/subwindow.cxx (STR #2079)
	- Fixed documentation (added missing COMCTRL32.LIB dependency)
	- Fixed menu position close to screen border (STR #2057)
	- Improved stability of fl_read_image (STR #2021)
	- Fixed adding an idle handler during
	  a draw() call (STR #1950)
	- Fl_Group::clip_children() is now public (STR #2017)
	- Added clarification to Fl_GL_Window mode
	  function (STR #1945)
	- Fixed Fluid textcolor output (STR #1992)
	- Fixed wrong default value of Fl_Spinner in
	  Fluid (STR #1991)
	- Fixed first modifier key event (STR #1952)
	- Fl_Group and Fl_Scroll now resize themselves before
	  resizing their children (STR #2032)
	- "fltk-config --post foo" now creates an application
	  bundle rather than attaching a resource fork.
	- Added scroll_to(int,int) to Fl_Scroll, replacing
	  position(int,int) which now behaves as it should (STR #1303)
	- Fixed Fl_Scroll inside Fl_Scroll (STR #265)
	- Hardcoded 1.1 references in src/Makefile to 1.3 (STR #1922)
	- Changed font index to 32 bit
	- Changed font size to 32 bit
        - Changed widget coordinates to 32 bit
        - Added support for shortcuts for Fl_Input_,
	  Fl_Value_Input, and Fl_Text_Display derived
          widgets (STR #1770)
        - Initial setup (STR #1904)
	- winsock dll is dynamically loaded and by default 
	  ws2_32.dll, use of winsock1 is still possible by defining 
	  USE_WSOCK1 at compile time.
	- Cairo support: added --enable-cairo and --enable-cairoext 
          configure options.
	- visualc(6) & vc2005 devenv's are in the ide subdirectory
	- hide() and show() methods are now virtual from Fl_Widget,
	  was only virtual since Fl_Window derived classes before.
	  So now widget->hide() will work if widget is a window.

CHANGES IN FLTK 1.1.9

	- Improved color contrast in secondary selection blocks
	  of Fl_Text_Display (STR #1917)
	- Fixed regression in callback handling (STR #1918)
	- Fixed wrong relative path when absolute path has a 