@@ -1,6 +1,10 @@
 CHANGES IN FLTK 1.3.0
 
-	- Improved test/subwindow.cxx (STR #2079)
+	- Fixed a problem with TrackMouseEvent() (Windows only) that would
+	  generate wrong FL_LEAVE events with subwindows. TrackMouseEvent
+	  is now enabled by default (it was disabled for GNU compilers).
+	  It can be disabled by defining NO_TRACK_MOUSE.
+	  Improved test/subwindow.cxx (STR #2079)
 	- Fixed documentation (added missing COMCTRL32.LIB dependency)
 	- Fixed menu position close to screen border (STR #2057)
 	- Improved stability of fl_read_image (STR #2021)
